--- a/public/src/main/webapp/WEB-INF/web.xml
+++ b/public/src/main/webapp/WEB-INF/web.xml
@@ -93,19 +93,32 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <filter>
-        <filter-name>CartFilter</filter-name>
-        <filter-class>ru.dz.labs.filters.CartFilter</filter-class>
+    <!--<filter>-->
+    <!--<filter-name>CartFilter</filter-name>-->
+    <!--<filter-class>ru.dz.labs.filters.CartFilter</filter-class>-->
 
-        <!--<init-param>-->
-            <!--<param-name>Active</param-name>-->
-            <!--<param-value>true</param-value>-->
-        <!--</init-param>-->
+    <!--&lt;!&ndash;<init-param>&ndash;&gt;-->
+    <!--&lt;!&ndash;<param-name>Active</param-name>&ndash;&gt;-->
+    <!--&lt;!&ndash;<param-value>true</param-value>&ndash;&gt;-->
+    <!--&lt;!&ndash;</init-param>&ndash;&gt;-->
 
-    </filter>
-    <filter-mapping>
-        <filter-name>CartFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+    <!--<filter-name>CartFilter</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
+
+    <!--<filter>-->
+        <!--<filter-name>CatalogFilter</filter-name>-->
+        <!--<filter-class>ru.dz.labs.filters.CatalogFilter</filter-class>-->
+        <!--&lt;!&ndash;<init-param>&ndash;&gt;-->
+        <!--&lt;!&ndash;<param-name>Active</param-name>&ndash;&gt;-->
+        <!--&lt;!&ndash;<param-value>true</param-value>&ndash;&gt;-->
+        <!--&lt;!&ndash;</init-param>&ndash;&gt;-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>CatalogFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
 </web-app>
