--- a/core/pom.xml
+++ b/core/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>postgresql</artifactId>
             <version>${org.postgresql.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
