--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <servlet.jstl.version>1.2</servlet.jstl.version>
         <com.java.version>1.7</com.java.version>
         <org.freemarker.version>2.3.20</org.freemarker.version>
+        <commons.codec.version>1.9</commons.codec.version>
+
     </properties>
 
     <profiles>
