--- a/public/pom.xml
+++ b/public/pom.xml
@@ -54,6 +54,12 @@
             <version>${servlet.jsp.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!--Хэширование MD5-->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons.codec.version}</version>
+        </dependency>
 
     </dependencies>
 
