--- a/public/src/main/webapp/WEB-INF/web.xml
+++ b/public/src/main/webapp/WEB-INF/web.xml
@@ -107,13 +107,13 @@
     <!--<url-pattern>/*</url-pattern>-->
     <!--</filter-mapping>-->
 
-    <filter>
-        <filter-name>MainFilter</filter-name>
-        <filter-class>ru.dz.labs.filters.MainFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>MainFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    <!--<filter>-->
+        <!--<filter-name>MainFilter</filter-name>-->
+        <!--<filter-class>ru.dz.labs.filters.MainFilter</filter-class>-->
+    <!--</filter>-->
+    <!--<filter-mapping>-->
+        <!--<filter-name>MainFilter</filter-name>-->
+        <!--<url-pattern>/*</url-pattern>-->
+    <!--</filter-mapping>-->
 
 </web-app>
