--- a/public/src/main/webapp/WEB-INF/web.xml
+++ b/public/src/main/webapp/WEB-INF/web.xml
@@ -92,6 +92,17 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+
+    <!-- Spring Security фильтр -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <!--<filter>-->
     <!--<filter-name>CartFilter</filter-name>-->
     <!--<filter-class>ru.dz.labs.filters.CartFilter</filter-class>-->
