--- a/mail/pom.xml
+++ b/mail/pom.xml
@@ -18,6 +18,11 @@
             <artifactId>mail</artifactId>
             <version>1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 </project>
