--- a/public/src/main/webapp/WEB-INF/web.xml
+++ b/public/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0" id="WebApp_ID">
 
-    <display-name>Tutors Public Module</display-name>
+    <display-name>Shop Public Module</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
